--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,10 @@ services:
     image: postgres:12-alpine
     restart: always
     volumes:
-      - ./scripts:/docker-entrypoint-initdb.d/
+      - ./scripts/:/docker-entrypoint-initdb.d/
       - ./bkp:/bkp
       - ./config/postgresql.conf:/etc/postgresql/postgresql.conf
     environment:
-      - POSTGRES_DB=teste
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_INITDB_ARGS=--auth-host=trust
