--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,20 @@ version: '3.9'
 
 services:
   postgres:
-    image: postgres:12-alpine
+    image: ${IMAGE}
     restart: always
     volumes:
-      - ./scripts/:/docker-entrypoint-initdb.d/
-      - ./bkp:/bkp
-      - ./config/postgresql.conf:/etc/postgresql/postgresql.conf
+      - ${PATH_INITIALIZATION_SCRIPTS}:/docker-entrypoint-initdb.d/
+      - ${PATH_BACKUP_STABLE_4_1}:/bkp/stable_4_1/
+      - ${PATH_BACKUP_MAIN_4_2}:/bkp/main_4_2/
+      - ${PATH_CONFIG_FILE}:/etc/postgresql/postgresql.conf
     environment:
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=${PASSWORD}
+      - POSTGRES_USER=${USER}
       - POSTGRES_INITDB_ARGS=--auth-host=trust
+      - BACKUP_STABLE_4_1_NAME=${BACKUP_STABLE_4_1_NAME}
+      - BACKUP_MAIN_4_2_NAME=${BACKUP_MAIN_4_2_NAME}
     ports:
-      - 5435:5432
+      - ${PORT}:5432
     command: postgres -c config_file=/etc/postgresql/postgresql.conf
     container_name: vrpostgresfiscal
